[CST-7217] Use short number pipe and fix badge alignment

--- a/src/app/shared/search/search-filters/search-filter/search-facet-filter-options/search-facet-selected-option/search-facet-selected-option.component.scss
+++ b/src/app/shared/search/search-filters/search-filter/search-facet-filter-options/search-facet-selected-option/search-facet-selected-option.component.scss
@@ -9,7 +9,7 @@ a {
 }
 
 .break-facet {
-    word-break: break-all;
+    word-break: break-word;
 }
 
 .filter-checkbox {
